<resources>
    <string name="app_name">CryptoCurrencyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending_description_string">Top-7 trending coins on CoinGecko as searched by users in the last 24 hours.</string>
    <string name="rankings">Rankings</string>
    <string name="crypto_icon">Crypto Icon</string>
    <string name="trending_coin_icon">Trending coin icon!</string>
    <string name="price_btc">Price BTC:</string>
    <string name="rank">Rank:</string>
    <string name="one_day">1D</string>
    <string name="seven_day">1W</string>
    <string name="fourteen_day">2W</string>
    <string name="thirty_day">1M</string>
    <string name="sixty_day">2M</string>
    <string name="current_price">Current Price</string>
    <string name="price_high_24h">Highest Price 24h</string>
    <string name="price_low_24h">Lowest Price 24h</string>
    <string name="description">Description</string>
    <string name="markets">Markets</string>
    <string name="list_all_exchanges">List all exchanges</string>
    <string name="market_icon">Market\'s icon.</string>
    <string name="search">Search</string>
    <string name="empty_search_message">You have not searched yet!</string>
    <string name="too_many_requests">Too many requests!</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="nothing_in_favourite">Nothing in Favourite</string>
    <string name="add_coin">Add Coin</string>
    <string name="image_of_coin">Image Of Coin</string>
    <string name="home">Home</string>
    <string name="one_year">1Y</string>
    <string name="market_cap">Market Cap</string>
    <string name="total_supply">Total Supply</string>
    <string name="available_supply">Available Supply</string>
    <string name="total_volume">Total Volume</string>
    <string name="all_time_high_price">All-Time High Price</string>
    <string name="all_time_low_price">All-Time Low Price</string>
    <string name="all_time_high_date">All-Time High Date</string>
    <string name="all_time_low_date">All-Time Low Date</string>
    <string name="top_coins">Top Coins</string>
    <string name="trending_coins">Trending Coins</string>
    <string name="dark_mode">Dark Mode</string>


</resources>