<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="coin"
            type="com.vladiyak.cryptocurrencyapp.api.newapi.dto.coins.CoinDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.detail.DetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScrollTargetViewId="@id/swipe_refresh">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:titleCentered="true">

                <ImageView
                    android:id="@+id/favtoggleButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_star_outline"
                    android:tag="OFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            tools:context=".presentation.detail.DetailFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/coin_icon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:loadImage="@{coin.image.large}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                    tools:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/tv_coin_name"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{coin.name}"
                    app:layout_constraintStart_toEndOf="@id/coin_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Bitcoin" />

                <TextView
                    android:id="@+id/tv_coin_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_marginStart="8dp"
                    android:text="@{coin.symbol}"
                    app:layout_constraintStart_toEndOf="@id/coin_icon"
                    app:layout_constraintTop_toBottomOf="@id/tv_coin_name"
                    tools:text="btc" />

                <TextView
                    android:id="@+id/tv_current_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:myText="@{coin.marketData.currentPrice.usd}"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coin_icon"
                    tools:text="$21234" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardPriceChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_current_price"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:cardBackgroundColor="@color/green">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleX="1.5"
                            android:scaleY="1.5"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/white"
                            tools:src="@drawable/ic_arrow_drop_up" />

                        <TextView
                            android:id="@+id/txtPriceChange"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_marginVertical="4dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="4,52%" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/materialCardPriceChange" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    app:checkedChip="@id/chip_1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/lineChart">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_1"
                        style="@style/Theme.Cryptolit.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one_day" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_7"
                        style="@style/Theme.Cryptolit.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seven_day"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_14"
                        style="@style/Theme.Cryptolit.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fourteen_day" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_30"
                        style="@style/Theme.Cryptolit.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thirty_day" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_60"
                        style="@style/Theme.Cryptolit.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sixty_day" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_365"
                        style="@style/Theme.Cryptolit.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one_year" />

                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/tv_high_24h_label"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/price_high_24h"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chip_group" />

                <TextView
                    android:id="@+id/tv_low_24h_label"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/price_low_24h"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_for_price"/>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_for_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_high_24h_label" />

                <TextView
                    android:id="@+id/tv_high_24h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:myText="@{coin.marketData.high24h.usd}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chip_group"
                    tools:text="$21607" />

                <TextView
                    android:id="@+id/tv_low_24h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:myText="@{coin.marketData.low24h.usd}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_for_price"
                    tools:text="$20211" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_for_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_low_24h_label" />

                <TextView
                    android:id="@+id/tv_description_label"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_low_24h_label" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_for_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="?actionBarSize"
                    android:text="@{coin.description.descriptionEN}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_for_description"
                    tools:text="description" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
